<resources>
    <string name="app_name">Timescape</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_dashboard">Dashboard</string>
    <string name="menu_inbox">Notifications</string>
    <string name="menu_account">Profile and Settings</string>
    <string name="menu_chats">Project Chats</string>
    <string name="menu_signout">Sign Out</string>
    <string name="register">Sign Up</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="signup_login_hint">Already have an account? Sign In</string>
    <string name="login_signup_hint">Don\'t have an account? Sign Up</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Sign In</string>
    <string name="register2">Sign Up</string>
    <string name="phone_number">Phone Number</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="unspecified">Unspecified</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="change">Change</string>
    <string name="use_google">Use Google Account</string>
    <string name="recent_projects">Recently Accessed</string>
    <string name="all_projects">All Projects</string>
    <string name="time_less_than_minute">less than a minute ago</string>
    <string name="time_minutes_ago">%d minutes ago</string>
    <string name="time_hours_ago">%d hours ago</string>
    <string name="time_days_ago">%d days ago</string>
    <string name="time_weeks_ago">%d weeks ago</string>
    <string name="time_months_ago">%d months ago</string>
    <string name="time_years_ago">%d years ago</string>
    <string name="last_edit">last edited</string>
    <string name="private_str">Private Project?</string>
    <string name="private_on">Private</string>
    <string name="private_off">Public</string>
    <string name="deadline">Deadline</string>
    <string name="description">Description</string>
    <string name="title">Title</string>
    <string name="add_project">New Project</string>
    <string name="create">Create</string>
    <string name="all_the_users_in_the_list_will_be_added_to_the_project_upon_creation">All the users in the list will be added to the project upon creation</string>
    <string name="add">Add</string>
    <string name="invite_members">Invite Members</string>
    <string name="project_tasks">Project Tasks</string>
    <string name="project_completion_progress">Project Completion Progress</string>
    <string name="back_button">Back</string>
    <string name="add_task">New Task</string>
    <string name="title_required">Title is required</string>
    <string name="description_required">Description is required</string>
    <string name="task_added_successfully">New task created</string>
    <string name="error_adding_task">Error while adding task</string>
    <string name="attach_file">Attach File</string>
    <string name="send_project_invite">Send Project Invite</string>
    <string name="type_message">Write a message</string>
    <string name="send_message">Send Message</string>
    <string name="options">Options</string>
    <string name="hide">Hide</string>
    <string name="unknown_user">Unknown User</string>
    <string name="attach_image">Attach Image</string>
    <string name="reply">Reply</string>
    <string name="sent_a_file">sent a file attachment.</string>
    <string name="sent_an_image">sent an image attachment.</string>
    <string name="select_text">Select Text</string>
    <string name="copy_message">Copy Message</string>
    <string name="share">Share</string>
    <string name="unsend_message">Unsend Message</string>
    <string name="save_changes">Save Changes</string>
    <string name="edit_project">Edit Project</string>
    <string name="edit_task">Edit Task</string>
    <string name="delete">Delete</string>
    <string name="project_chat">Project Chat</string>
    <string name="show_members">Show Members</string>
    <string name="edit_project_details">Edit Project Details</string>
    <string name="private_str2">Private</string>
    <string name="public_str">Public</string>
    <string name="mark_as_read">Mark as Read</string>
    <string name="mark_as_unread">Mark as Unread</string>
    <string name="error_creating_local_file">"Error creating local file: "</string>
    <string name="file_downloaded">File downloaded</string>
    <string name="error_saving_the_file">"Error saving the file: "</string>
    <string name="failed_to_download_file">"Failed to download file: "</string>
    <string name="file_downloaded_at">"File downloaded at: "</string>
    <string name="download">Download</string>
    <string name="read">"Read "</string>
    <string name="message_deleted">message deleted</string>
    <string name="project">"Project: "</string>
    <string name="task_updated">Task updated</string>
    <string name="error_while_updating_task">Error while updating task</string>
    <string name="delete_this_task">Delete this task?</string>
    <string name="this_action_cannot_be_undone">This action cannot be undone.</string>
    <string name="delete_b">Delete</string>
    <string name="task_deleted">Task deleted</string>
    <string name="error_while_deleting_task">Error while deleting task</string>
    <string name="all">All</string>
    <string name="unread">Unread</string>
    <string name="read_2">Read</string>
    <string name="permission_not_granted">Permission not granted</string>
    <string name="user_is_already_a_member_of_the_project">User is already a member of the project</string>
    <string name="user_added_to_the_project">User added to the project</string>
    <string name="failed_to_add_user_to_the_project">Failed to add user to the project</string>
    <string name="image_saved_to_gallery">Image saved to gallery</string>
    <string name="error_saving_image_to_gallery">Error saving image to gallery</string>
    <string name="please_fill_all_fields">Please fill all fields</string>
    <string name="authentication_failed">"Authentication failed: "</string>
    <string name="phone_number_not_found">Phone number not found</string>
    <string name="error_retrieving_user">"Error retrieving user: "</string>
    <string name="google_sign_in_failed">"Google sign-in failed: "</string>
    <string name="error_checking_user_data">"Error checking user data: "</string>
    <string name="registration_successful">Registration successful</string>
    <string name="error_saving_user_data">"Error saving user data: "</string>
    <string name="mmm_dd_yyyy_at_hh_mm">MMM dd, yyyy \'at\' HH:mm</string>
    <string name="all_fields_must_be_filled">All fields must be filled</string>
    <string name="project_created_successfully">Project created successfully!</string>
    <string name="error_creating_project">"Error creating project: "</string>
    <string name="you_are_already_in_the_project">You are already in the project</string>
    <string name="you_have_been_added_to_the_project">You have been added to the project</string>
    <string name="failed_to_join_project">Failed to join project</string>
    <string name="failed_to_fetch_project_information">Failed to fetch project information</string>
    <string name="chat_has_been_muted">Chat has been muted</string>
    <string name="failed_to_mute_chat">Failed to mute chat</string>
    <string name="members_are_typing">" members are typing..."</string>
    <string name="_1_member_is_typing">1 member is typing...</string>
    <string name="other_members_online">" other members online"</string>
    <string name="_1_other_member_online">1 other member online</string>
    <string name="failed_to_send_message">Failed to send message</string>
    <string name="please_enter_a_message">Please enter a message</string>
    <string name="replied_message_unavailable">Replied message unavailable</string>
    <string name="message_copied_to_clipboard">Message copied to clipboard</string>
    <string name="cannot_unsend_messages_sent_more_than_24_hours_ago">Cannot unsend messages sent more than 24 hours ago</string>
    <string name="replying_to">"Replying to "</string>
    <string name="s_message">\'s message</string>
    <string name="failed_to_send_reply_message">Failed to send reply message</string>
    <string name="failed_to_upload">"Failed to upload: "</string>
    <string name="project_edited_successfully">Project edited successfully!</string>
    <string name="error_editing_project">"Error editing project: "</string>
    <string name="d_members">%d members</string>
    <string name="_0_members">0 members</string>
    <string name="deadline_passed">Deadline passed</string>
    <string name="d_days_left">%d days left</string>
    <string name="d_hours_left">%d hours left</string>
    <string name="d_minutes_left">%d minutes left</string>
    <string name="under_a_minute_left">Under a minute left</string>
    <string name="no_tasks_yet">No tasks yet</string>
    <string name="d_out_of_d_completed">%d out of %d completed</string>
    <string name="delete_project">DELETE PROJECT</string>
    <string name="leave_project">LEAVE PROJECT</string>
    <string name="only_project_owner_can_invite_members_in_private_projects">Only project owner can invite members in private projects</string>
    <string name="only_project_owner_can_generate_invite_links_in_private_projects">Only project owner can generate invite links in private projects</string>
    <string name="are_you_sure_you_want_to">"Are you sure you want to "</string>
    <string name="delete_2">delete</string>
    <string name="leave">leave</string>
    <string name="this_project">" this project?"</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="project_invite_link">Project Invite Link</string>
    <string name="share_project_invite_link">Share Project Invite Link</string>
    <string name="project_invite_link_2">Project Invite Link</string>
    <string name="link_copied_to_clipboard">Link copied to clipboard</string>
    <string name="error_generating_invite_link_please_try_again">Error generating invite link, please try again</string>
    <string name="search_user">Search User</string>
    <string name="are_you_sure_you_want_to_remove_this_member">Are you sure you want to remove this member?</string>
    <string name="name_must_be_3_chars">Name must be > 3 chars</string>
    <string name="password_must_be_5_chars">Password must be > 5 chars</string>
    <string name="phone_must_be_6_chars">Phone must be > 6 chars</string>
    <string name="email_must_be_valid">Email must be valid!</string>
    <string name="new_project">"new project "</string>
    <string name="more">More</string>
    <string name="project_invite_link_3">Project Invite Link</string>
    <string name="invite_member">Invite Member</string>
    <string name="s_ago">s ago</string>
    <string name="m_ago">m ago</string>
    <string name="h_ago">h ago</string>
    <string name="d_ago">d ago</string>
    <string name="mo_ago">mo ago</string>
    <string name="y_ago">y ago</string>
    <string name="projects">Projects</string>
    <string name="all_tasks">All Tasks</string>
    <string name="tasks_for_today">Tasks for Today</string>
    <string name="foreground_service">Foreground Service</string>
    <string name="project_chats">Project Chats</string>
    <string name="phone">Phone Number</string>
    <string name="email_address">Email Address</string>
</resources>