<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/loginCard"
    app:cardCornerRadius="@dimen/loginCardRadius"
    android:elevation="5dp"
    android:layout_gravity="center"
    android:layout_marginTop="@dimen/loginViewsMargin"
    android:layout_marginBottom="@dimen/loginViewsMargin"
    android:background="@color/whiteCardColor">



    <LinearLayout
        style="@style/linearParent"
        android:layout_gravity="center"
        android:padding="@dimen/loginViewsMargin"
        android:background="@color/black"
        >

        <TextView
            style="@style/headerTextPrimary"
            android:text="@string/login"
            android:layout_marginTop="@dimen/loginViewsMargin"/>

        <RadioGroup
            android:id="@+id/radioGroupLoginMethod"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="15dp"
            >
            <RadioButton
                android:id="@+id/radioBtnPhone"
                android:layout_width="wrap_content"
                android:layout_height="24dp"
                android:text="@string/phone"
                android:textColor="@color/logo_orange2"
                android:layout_marginLeft="15dp"
                />
            <RadioButton
                android:id="@+id/radioBtnEmail"
                android:layout_width="wrap_content"
                android:layout_height="24dp"
                android:text="@string/email_address"
                android:textColor="@color/logo_orange2"
                android:layout_marginLeft="20dp"
                />

        </RadioGroup>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputEmail"
            style="@style/parent"
            android:layout_marginTop="@dimen/loginViewsMargin">
            <EditText
                android:id="@+id/editTextEmail"
                style="@style/modifiedEditText"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:textColorHint="@color/logo_orange2"
                android:hint="@string/login_email_hint"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputPhone"
            style="@style/parent"
            android:layout_marginTop="@dimen/loginViewsMargin">
            <EditText
                android:id="@+id/editTextPhone"
                style="@style/modifiedEditText"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:textColorHint="@color/logo_orange2"
                android:hint="@string/phone_number"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputPassword"
            style="@style/parent"
            android:layout_marginTop="@dimen/loginViewsMargin">
            <EditText
                android:id="@+id/editTextPassword"
                style="@style/modifiedEditText"
                android:hint="@string/login_password_hint"
                android:maxLines="1"
                android:textColorHint="@color/logo_orange2"
                android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>

<!--        <TextView-->
<!--            android:id="@+id/loginForgotPasswordText"-->
<!--            style="@style/viewParent"-->
<!--            android:text="@string/forgot_password"-->
<!--            android:textColor="@color/logo_red"-->
<!--            android:textSize="@dimen/newsMoreTextSize"-->
<!--            android:layout_gravity="end"-->
<!--            android:layout_marginTop="10dp"/>-->

        <TextView
            android:id="@+id/loginGoToRegisterText"
            style="@style/parent"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textColor="@color/logo_orange2"
            android:text="@string/login_signup_hint"
            android:layout_marginTop="@dimen/loginViewsMargin"/>

        <Button
            android:id="@+id/cirLoginButton"
            style="@style/loginButton"
            android:text="@string/login"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/loginViewsMargin"
            android:layout_width="match_parent"
            android:background="@drawable/button_with_ripple"
            />

        <Button
            android:id="@+id/cirGoogleButton"
            style="@style/loginButton"
            android:layout_gravity="center"
            android:text="@string/use_google"
            android:layout_marginTop="@dimen/loginViewsMargin"
            android:layout_width="match_parent"
            android:drawableLeft="@drawable/google_logo_24"
            android:drawablePadding="8dp"
            android:background="@drawable/button_with_ripple"
            />

    </LinearLayout>
</androidx.cardview.widget.CardView>